// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptModal renders 1`] = `
<body>
  <div
    aria-hidden="true"
  >
    <div
      class="Picasso-root"
    />
  </div>
  <div
    class="MuiDialog-root PicassoModal-root"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
        role="dialog"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h2
            class="m-0 text-black font-semibold text-xl text-black"
          >
            Test title
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <p
              class="m-0 font-regular text-md text-graphite"
            >
              Test message
            </p>
          </div>
        </div>
        <div
          class="PicassoModalAction-root"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
            data-component-type="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Cancel
            </span>
          </button>
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 2`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root PicassoModal-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
          role="none presentation"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
            role="dialog"
          >
            <div
              class="PicassoModalTitle-root"
            >
              <h2
                class="m-0 text-black font-semibold text-xl text-black"
              >
                Test title
              </h2>
            </div>
            <div
              class="PicassoModalContent-wrapper"
            >
              <div
                class="PicassoModalContent-modalContent"
              >
                <p
                  class="m-0 font-regular text-md text-graphite"
                >
                  Test message
                </p>
              </div>
            </div>
            <div
              class="PicassoModalAction-root"
            >
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-secondary PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Cancel
                </span>
              </button>
              <button
                class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
                data-component-type="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                >
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 3`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt with input returns result on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;
